--- a/index.html
+++ b/index.html
@@ -25,5 +25,8 @@ text-align:center; /* 文字等内容居中 */
 									<img src="../pictures/FoFTG.jpg"></img>
 			<iframe ="no" border="0" marginwidth="0" marginheight="0" width=440 height=106 src="//music.163.com/outchain/player?type=2&id=1325182498&auto=1&height=66"></iframe>
 				</div>
+	<div class="footer">
+           <h4>copyright 2021 COMICFLY</h4>
+       </div>
 </body>
 </html>
