--- a/index.html
+++ b/index.html
@@ -25,8 +25,6 @@ text-align:center; /* 文字等内容居中 */
 									<img src="../pictures/FoFTG.jpg"></img>
 			<iframe ="no" border="0" marginwidth="0" marginheight="0" width=440 height=106 src="//music.163.com/outchain/player?type=2&id=1325182498&auto=1&height=66"></iframe>
 				</div>
-	<div class="footer">
-           <h4>copyright 2021 COMICFLY</h4>
-       </div>
+	<div class="copyright"><p>Copyright &copy; 2019-2021<a href="https://comicfly.github.io">COMICFLY</a></p></div>
 </body>
 </html>
