--- a/index.html
+++ b/index.html
@@ -25,6 +25,6 @@ text-align:center; /* 文字等内容居中 */
 									<img src="../pictures/FoFTG.jpg"></img>
 			<iframe ="no" border="0" marginwidth="0" marginheight="0" width=440 height=106 src="//music.163.com/outchain/player?type=2&id=1325182498&auto=1&height=66"></iframe>
 				</div>
-	<div class="copyright"><p>Copyright &copy; 2019-2021<a href="https://comicfly.github.io">COMICFLY</a></p></div>
+	<footer class="footer"><div class="container"><div class="clearfix"><div class="footer-col footer-col-copy"><ul class="footer-nav hidden-xs">		  <li class="menu-item"><div class="copyright"><p>Copyright © 2002-2021<a href="https://www.uoowu.com/">自媒体热点</a> EMAIL:geilihua#gmail.com</p></div></div><div class="footer-col footer-col-sns"><div class="footer-sns"></div></div></div></div></footer>
 </body>
 </html>
