--- a/index.html
+++ b/index.html
@@ -25,9 +25,16 @@ text-align:center; /* 文字等内容居中 */
 									<img src="../pictures/FoFTG.jpg"></img>
 			<iframe ="no" border="0" marginwidth="0" marginheight="0" width=440 height=106 src="//music.163.com/outchain/player?type=2&id=1325182498&auto=1&height=66"></iframe>
 				</div>
-	<div id=”footer”> 
-　　©2021 COMICFLY<br /> 
-　　a href="https://m.bilibili.com/space/505555071" target="_blank">COMICFLY</a> 
+	<div class="div_foot">
+ &copy;2017-2018 www.autohome.com.cn All Right Reserved.汽车之家版权所有
+ </div>
+.div_foot {
+ position: absolute;
+ height: 50px;
+ text-align: center;
+ line-height: 50px;
+ width: 100%;
+}
 </div> 
 </body>
 </html>
