--- a/index.html
+++ b/index.html
@@ -25,16 +25,99 @@ text-align:center; /* 文字等内容居中 */
 									<img src="../pictures/FoFTG.jpg"></img>
 			<iframe ="no" border="0" marginwidth="0" marginheight="0" width=440 height=106 src="//music.163.com/outchain/player?type=2&id=1325182498&auto=1&height=66"></iframe>
 				</div>
-	<div class="div_foot">
- &copy;2017-2018 www.autohome.com.cn All Right Reserved.汽车之家版权所有
- </div>
-.div_foot {
- position: absolute;
- height: 50px;
- text-align: center;
- line-height: 50px;
- width: 100%;
+<style type="text/css">
+
+*{
+
+  padding: 0;
+
+  margin: 0;
+
+}*
+
+.gcs-footer{
+
+  margin-top: 20px;
+
+  background:#222c3a;
+
+  width: 100%;
+
+  height: 165px;
+
+  text-align: center;
+
+  color: white;
+
+  position: absolute;
+
 }
+
+.gcs-footer .footer-top{
+
+  margin-top: 50px;
+
+}
+
+.gcs-footer a{
+
+  color: #f0f1f1;
+
+  text-decoration: none;
+
+  padding: 0 10px;
+
+  vertical-align:middle;
+
+}
+
+.gcs-footer a:hover{
+
+  color: red;
+
+  text-decoration: underline;
+
+}
+
+.gcs-footer p{
+
+  height: 15px;
+
+  color: #888888;
+
+  margin-top: 30px;
+
+}
+
+</style>
+
+</head>
+
+<body>
+
+<div class="gcs-footer">
+
+  <div class="footer-top">
+
+    <a href="#">百度网</a> |
+
+    <a href="#">新浪网</a> |
+
+    <a href="#">腾迅房产</a> |
+
+    <a href="#">找货网</a> |
+
+    <a href="#">北极绒</a> |
+
+    <a href="#">阿里巴巴</a> |
+
+ </div>
+
+  <p>
+
+    ©Copyright 2018 海盗侠科技公司版权所有 | 上海ICP备12438170号-4
+
+  </p>
 </div> 
 </body>
 </html>
