--- a/index.html
+++ b/index.html
@@ -25,6 +25,12 @@ text-align:center; /* 文字等内容居中 */
 									<img src="../pictures/FoFTG.jpg"></img>
 			<iframe ="no" border="0" marginwidth="0" marginheight="0" width=440 height=106 src="//music.163.com/outchain/player?type=2&id=1325182498&auto=1&height=66"></iframe>
 				</div>
+	<br/>
+	<br/>
+	<br/>
+	<br/>
+	<br/>
+	<br/>
 <style type="text/css">
 
 *{
@@ -99,23 +105,23 @@ text-align:center; /* 文字等内容居中 */
 
   <div class="footer-top">
 
-    <a href="#">百度网</a> |
+    <a href="https://www.google.com">谷歌</a> |
 
-    <a href="#">新浪网</a> |
+    <a href="https://www.bing.com">必应</a> |
 
-    <a href="#">腾迅房产</a> |
+    <a href="https://gitHub.com">GitHub</a> |
 
-    <a href="#">找货网</a> |
+    <a href="#">#</a> |
 
-    <a href="#">北极绒</a> |
+    <a href="#">#</a> |
 
-    <a href="#">阿里巴巴</a> |
+    <a href="#">#</a> |
 
  </div>
 
   <p>
 
-    ©Copyright 2018 海盗侠科技公司版权所有 | 上海ICP备12438170号-4
+    ©Copyright 20221 COMICFLY | 没有备案（doge）
 
   </p>
 </div> 
