--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <title>COMICFLY官网</title>
+	<style>
+		body{
+		background-color: black;
+		}
+	</style>
 <style type="text/css">
 .align-center{
 margin:0 auto; /* 居中 这个是必须的，，其它的属性非必须 */
