--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 .align-center{
 margin:0 auto; /* 居中 这个是必须的，，其它的属性非必须 */
 width:1000px; /* 给个宽度 顶到浏览器的两边就看不出居中效果了 */
-background:white; /* 背景色 */
+background:#A9A9A9; /* 背景色 */
 text-align:center; /* 文字等内容居中 */
 }
 </style>
