--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <title>COMICFLY官网</title>
 	<style>
 		body{
-		background-color: black;
+		background-color:#434343  ;
 		}
 	</style>
 <style type="text/css">
