--- a/index.html
+++ b/index.html
@@ -22,12 +22,20 @@ text-align:center; /* 文字等内容居中 */
 				<p style="font-size:70px">网站开发中......
 				</p>
 				<br/>
+	<br/>
+	<br/>
 			<p style="font-size:50px">先去看看UP的视频吧qaq<a href="https://m.bilibili.com/space/505555071" target="_blank">COMICFLY</a>
 			</p>
+	<br/>
+	<br/>
+	
 		<p style="font-size:30px">
 						听听FoFTG的阴间特效BGM
 									</p>
-									<img src="../pictures/FoFTG.jpg"></img>
+	<br/>
+	<br/>
+		<br/>
+	<br/>							<img src="../pictures/FoFTG.jpg"></img>
 	<br/>
 			<iframe ="no" border="0" marginwidth="0" marginheight="0" width=440 height=106 src="//music.163.com/outchain/player?type=2&id=1325182498&auto=1&height=66"></iframe>
 		<br/>
@@ -105,7 +113,7 @@ text-align:center; /* 文字等内容居中 */
 
   text-decoration: none;
 
-  padding: 0 10px;
+  padding: 0px;
 
   vertical-align:middle;
 
