--- a/404.html
+++ b/404.html
@@ -79,7 +79,7 @@
     </div>
   </div>
   <footer class="footer">
-    Powered by <a href="https://gridea.dev" target="_blank">Gridea</a>
+    Powered by <a href="https://comicfly.github.io" target="_blank">COMICFLY</a>
   </footer>
   <script>
     var back = document.getElementById('back')
