--- a/beta/index.html
+++ b/beta/index.html
@@ -75,7 +75,7 @@
     <p style="font-size:40px">如果你看到这个页面，证明我已经开始写网站了</p>
     <p>目前该网站处于beta状态,预计在2022年春节前完成编写</p>
     <div class="comicfy">
-    <a href="/fliesdownload/" target="-blank" title="文件下载"><img src="/pictures/flies.png"></a>    
+    <a href="/fliesdownload/" target="-blank" title="文件下载"><img src="https://raw.githubusercontent.com/COMICFLY/comicfly.github.io/main/beta/pictures/flies.png"></a>    
     </div>
         <p>↖这里有UP做视频是提到的文件（正在开发,不能进入）</p>
     <br/>
