--- a/beta/index.html
+++ b/beta/index.html
@@ -95,7 +95,7 @@
     <div>视频：</div>
     <br/>
     <video width="800" height="450" controls>
-        <source src="/video/shotoniphone.mp4"  type="video/mp4">
+        <source src="https://upos-sz-mirrorcos.bilivideo.com/upgcxcode/33/72/397077233/397077233-1-192.mp4?e=ig8euxZM2rNcNbRVhwdVhwdlhWdVhwdVhoNvNC8BqJIzNbfq9rVEuxTEnE8L5F6VnEsSTx0vkX8fqJeYTj_lta53NCM=&uipk=5&nbs=1&deadline=1636300699&gen=playurlv2&os=cosbv&oi=1866715013&trid=c652d499b239463ea8e31041fd485558T&platform=html5&upsig=aded00592224b0b4499eeb9592b0966a&uparams=e,uipk,nbs,deadline,gen,os,oi,trid,platform&mid=0&bvc=vod&nettype=0&orderid=0,1&logo=80000000"  type="video/mp4">
         <source src="movie.ogg"  type="video/ogg">
         您的浏览器不支持 HTML5 video 标签。
       </video>
