--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ text-align:center;
 padding:1px;
 "
  > 
-<img id="v2" alt="comicfly" src="https://i0.hdslb.com/bfs/face/ec393571863847beab971ab0fd32d44fda00fc95.jpg" width="44px" height="44px"> 
+<img id="v2" alt="comicfly" src="/imge/face.jpg" width="44px" height="44px"> 
 </div> 
 <div id="v3" style="
  background-color:#0f0f0f;
