--- a/index.html
+++ b/index.html
@@ -9,19 +9,19 @@
       margin:0;
       }
     body{
-      background-color:blue;
+      background-color:#0f0f0f;
       padding-top:10px;
       text-align:center;
       }
     .sx{
       width:260px;
-      background-color:yellow;
+      background-color:#000000;
       margin:5px auto;
       padding:6px;
       font-size:20px;
       border:2px black solid ;
       border-radius:15px;
-      color:red;
+      color:White;
       }
     
     
@@ -65,10 +65,8 @@
 
 <div class="sx" name="http://hc.baozi66.top:99/xjj1.php" onclick="sxsp(this);">随机抖音小姐姐视频</div>
 <div class="sx" name="http://hc.baozi66.top:99/xjj.php?type=mp4" onclick="sxsp(this);">随机快手小姐姐视频</div>
-<div class="sx" onclick="jq();">获取更多软件资源</div>
 
 <script>
-function jq(){
 function sxsp(sjsp){
     var hqid=document.getElementById("sp");
     hqid.src=sjsp.getAttribute("name");
@@ -77,14 +75,19 @@ function sxsp(sjsp){
 <center>
 <p style="color:yellow;"><b>无法播放的视频，就一直点击切换!</b></p>
 </center>
+
+
+
 <script>
 function ggqueren(){
     var g_g = document.getElementsByClassName("ying-tc")[0];
     var bf = document.getElementById("sp");
-    bf.src="http://hc.baozi66.top:99/xjj.php?type=mp4";
+    bf.src="http://hc.baozi66.top:99/xjj.php?type=mp4  
     g_g.remove();
 }
 </script>
-
+<footer>
+<center style="color:White">Copyright 2022 COMICFLY all rights revered</center>
+</footer>
   </body>
 </html>
