--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
             display: block;
         }
     </style>
+<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 </head>
 <body>
     <canvas id="fireworkCanvas"></canvas>
