--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="zh-CN">
 <head>
     <meta charset="UTF-8">
-    <title>烟花发射和绽放效果</title>
+    <title>跨年</title>
     <style>
         body, html {
             margin: 0;
